// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Database Functions column 1`] = `
Object {
  "children": Object {
    "Equal": Array [
      Object {
        "endColumn": 1,
        "endLine": 1,
        "endOffset": 0,
        "image": "=",
        "startColumn": 1,
        "startLine": 1,
        "startOffset": 0,
        "tokenType": Object {
          "CATEGORIES": Array [
            Object {
              "CATEGORIES": Array [],
              "PATTERN": /NOT_APPLICABLE/,
              "categoryMatches": Array [
                12,
                13,
                15,
                16,
              ],
              "categoryMatchesMap": Object {
                "12": true,
                "13": true,
                "15": true,
                "16": true,
              },
              "isParent": true,
              "name": "EqualCompareOperator",
              "tokenTypeIdx": 3,
            },
          ],
          "PATTERN": /=/,
          "categoryMatches": Array [],
          "categoryMatchesMap": Object {},
          "isParent": false,
          "name": "Equal",
          "tokenTypeIdx": 12,
        },
        "tokenTypeIdx": 12,
      },
    ],
    "expression": Array [
      Object {
        "children": Object {
          "combineExpression": Array [
            Object {
              "children": Object {
                "lhs": Array [
                  Object {
                    "children": Object {
                      "rhs": Array [
                        Object {
                          "children": Object {
                            "lhs": Array [
                              Object {
                                "children": Object {
                                  "lhs": Array [
                                    Object {
                                      "children": Object {
                                        "lhs": Array [
                                          Object {
                                            "children": Object {
                                              "lhs": Array [
                                                Object {
                                                  "children": Object {
                                                    "lhs": Array [
                                                      Object {
                                                        "children": Object {
                                                          "lhs": Array [
                                                            Object {
                                                              "children": Object {
                                                                "columnExpression": Array [
                                                                  Object {
                                                                    "children": Object {
                                                                      "Dollar": Array [
                                                                        Object {
                                                                          "endColumn": 2,
                                                                          "endLine": 1,
                                                                          "endOffset": 1,
                                                                          "image": "$",
                                                                          "startColumn": 2,
                                                                          "startLine": 1,
                                                                          "startOffset": 1,
                                                                          "tokenType": Object {
                                                                            "CATEGORIES": Array [],
                                                                            "PATTERN": /\\\\\\$/,
                                                                            "categoryMatches": Array [],
                                                                            "categoryMatchesMap": Object {},
                                                                            "isParent": false,
                                                                            "name": "Dollar",
                                                                            "tokenTypeIdx": 23,
                                                                          },
                                                                          "tokenTypeIdx": 23,
                                                                        },
                                                                      ],
                                                                      "Sharp": Array [
                                                                        Object {
                                                                          "endColumn": 39,
                                                                          "endLine": 1,
                                                                          "endOffset": 38,
                                                                          "image": "#",
                                                                          "startColumn": 39,
                                                                          "startLine": 1,
                                                                          "startOffset": 38,
                                                                          "tokenType": Object {
                                                                            "CATEGORIES": Array [],
                                                                            "PATTERN": /#/,
                                                                            "categoryMatches": Array [],
                                                                            "categoryMatchesMap": Object {},
                                                                            "isParent": false,
                                                                            "name": "Sharp",
                                                                            "tokenTypeIdx": 25,
                                                                          },
                                                                          "tokenTypeIdx": 25,
                                                                        },
                                                                      ],
                                                                      "UUID": Array [
                                                                        Object {
                                                                          "endColumn": 38,
                                                                          "endLine": 1,
                                                                          "endOffset": 37,
                                                                          "image": "28e28190-63bd-4f70-aeca-26e72574c01a",
                                                                          "startColumn": 3,
                                                                          "startLine": 1,
                                                                          "startOffset": 2,
                                                                          "tokenType": Object {
                                                                            "CATEGORIES": Array [],
                                                                            "PATTERN": /\\[0-9a-f\\]\\{8\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{12\\}/,
                                                                            "categoryMatches": Array [],
                                                                            "categoryMatchesMap": Object {},
                                                                            "isParent": false,
                                                                            "name": "UUID",
                                                                            "tokenTypeIdx": 27,
                                                                          },
                                                                          "tokenTypeIdx": 27,
                                                                        },
                                                                        Object {
                                                                          "endColumn": 75,
                                                                          "endLine": 1,
                                                                          "endOffset": 74,
                                                                          "image": "62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
                                                                          "startColumn": 40,
                                                                          "startLine": 1,
                                                                          "startOffset": 39,
                                                                          "tokenType": Object {
                                                                            "CATEGORIES": Array [],
                                                                            "PATTERN": /\\[0-9a-f\\]\\{8\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{12\\}/,
                                                                            "categoryMatches": Array [],
                                                                            "categoryMatchesMap": Object {},
                                                                            "isParent": false,
                                                                            "name": "UUID",
                                                                            "tokenTypeIdx": 27,
                                                                          },
                                                                          "tokenTypeIdx": 27,
                                                                        },
                                                                      ],
                                                                    },
                                                                    "name": "columnExpression",
                                                                  },
                                                                ],
                                                              },
                                                              "name": "atomicExpression",
                                                            },
                                                          ],
                                                        },
                                                        "name": "chainExpression",
                                                      },
                                                    ],
                                                  },
                                                  "name": "multiplicationExpression",
                                                },
                                              ],
                                            },
                                            "name": "additionExpression",
                                          },
                                        ],
                                      },
                                      "name": "concatExpression",
                                    },
                                  ],
                                },
                                "name": "compareExpression",
                              },
                            ],
                          },
                          "name": "equalCompareExpression",
                        },
                      ],
                    },
                    "name": "notExpression",
                  },
                ],
              },
              "name": "combineExpression",
            },
          ],
        },
        "name": "expression",
      },
    ],
  },
  "name": "startExpression",
}
`;

exports[`Database Functions size 1`] = `
Object {
  "children": Object {
    "Equal": Array [
      Object {
        "endColumn": 1,
        "endLine": 1,
        "endOffset": 0,
        "image": "=",
        "startColumn": 1,
        "startLine": 1,
        "startOffset": 0,
        "tokenType": Object {
          "CATEGORIES": Array [
            Object {
              "CATEGORIES": Array [],
              "PATTERN": /NOT_APPLICABLE/,
              "categoryMatches": Array [
                12,
                13,
                15,
                16,
              ],
              "categoryMatchesMap": Object {
                "12": true,
                "13": true,
                "15": true,
                "16": true,
              },
              "isParent": true,
              "name": "EqualCompareOperator",
              "tokenTypeIdx": 3,
            },
          ],
          "PATTERN": /=/,
          "categoryMatches": Array [],
          "categoryMatchesMap": Object {},
          "isParent": false,
          "name": "Equal",
          "tokenTypeIdx": 12,
        },
        "tokenTypeIdx": 12,
      },
    ],
    "expression": Array [
      Object {
        "children": Object {
          "combineExpression": Array [
            Object {
              "children": Object {
                "lhs": Array [
                  Object {
                    "children": Object {
                      "rhs": Array [
                        Object {
                          "children": Object {
                            "lhs": Array [
                              Object {
                                "children": Object {
                                  "lhs": Array [
                                    Object {
                                      "children": Object {
                                        "lhs": Array [
                                          Object {
                                            "children": Object {
                                              "lhs": Array [
                                                Object {
                                                  "children": Object {
                                                    "lhs": Array [
                                                      Object {
                                                        "children": Object {
                                                          "Dot": Array [
                                                            Object {
                                                              "endColumn": 39,
                                                              "endLine": 1,
                                                              "endOffset": 38,
                                                              "image": ".",
                                                              "startColumn": 39,
                                                              "startLine": 1,
                                                              "startOffset": 38,
                                                              "tokenType": Object {
                                                                "CATEGORIES": Array [],
                                                                "PATTERN": /\\\\\\./,
                                                                "categoryMatches": Array [],
                                                                "categoryMatchesMap": Object {},
                                                                "isParent": false,
                                                                "name": "Dot",
                                                                "tokenTypeIdx": 26,
                                                              },
                                                              "tokenTypeIdx": 26,
                                                            },
                                                          ],
                                                          "lhs": Array [
                                                            Object {
                                                              "children": Object {
                                                                "blockExpression": Array [
                                                                  Object {
                                                                    "children": Object {
                                                                      "Dollar": Array [
                                                                        Object {
                                                                          "endColumn": 2,
                                                                          "endLine": 1,
                                                                          "endOffset": 1,
                                                                          "image": "$",
                                                                          "startColumn": 2,
                                                                          "startLine": 1,
                                                                          "startOffset": 1,
                                                                          "tokenType": Object {
                                                                            "CATEGORIES": Array [],
                                                                            "PATTERN": /\\\\\\$/,
                                                                            "categoryMatches": Array [],
                                                                            "categoryMatchesMap": Object {},
                                                                            "isParent": false,
                                                                            "name": "Dollar",
                                                                            "tokenTypeIdx": 23,
                                                                          },
                                                                          "tokenTypeIdx": 23,
                                                                        },
                                                                      ],
                                                                      "UUID": Array [
                                                                        Object {
                                                                          "endColumn": 38,
                                                                          "endLine": 1,
                                                                          "endOffset": 37,
                                                                          "image": "28e28190-63bd-4f70-aeca-26e72574c01a",
                                                                          "startColumn": 3,
                                                                          "startLine": 1,
                                                                          "startOffset": 2,
                                                                          "tokenType": Object {
                                                                            "CATEGORIES": Array [],
                                                                            "PATTERN": /\\[0-9a-f\\]\\{8\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{12\\}/,
                                                                            "categoryMatches": Array [],
                                                                            "categoryMatchesMap": Object {},
                                                                            "isParent": false,
                                                                            "name": "UUID",
                                                                            "tokenTypeIdx": 27,
                                                                          },
                                                                          "tokenTypeIdx": 27,
                                                                        },
                                                                      ],
                                                                    },
                                                                    "name": "blockExpression",
                                                                  },
                                                                ],
                                                              },
                                                              "name": "atomicExpression",
                                                            },
                                                          ],
                                                          "rhs": Array [
                                                            Object {
                                                              "children": Object {
                                                                "Colon": Array [
                                                                  Object {
                                                                    "endColumn": 45,
                                                                    "endLine": 1,
                                                                    "endOffset": 44,
                                                                    "image": "::",
                                                                    "startColumn": 44,
                                                                    "startLine": 1,
                                                                    "startOffset": 43,
                                                                    "tokenType": Object {
                                                                      "CATEGORIES": Array [],
                                                                      "PATTERN": /::/,
                                                                      "categoryMatches": Array [],
                                                                      "categoryMatchesMap": Object {},
                                                                      "isParent": false,
                                                                      "name": "Colon",
                                                                      "tokenTypeIdx": 37,
                                                                    },
                                                                    "tokenTypeIdx": 37,
                                                                  },
                                                                ],
                                                                "FunctionGroupName": Array [
                                                                  Object {
                                                                    "endColumn": 43,
                                                                    "endLine": 1,
                                                                    "endOffset": 42,
                                                                    "image": "core",
                                                                    "startColumn": 40,
                                                                    "startLine": 1,
                                                                    "startOffset": 39,
                                                                    "tokenType": Object {
                                                                      "CATEGORIES": Array [],
                                                                      "PATTERN": /\\[a-zA-Z\\]\\[a-zA-Z0-9_\\]\\*/,
                                                                      "categoryMatches": Array [],
                                                                      "categoryMatchesMap": Object {},
                                                                      "isParent": false,
                                                                      "name": "FunctionGroupName",
                                                                      "tokenTypeIdx": 38,
                                                                    },
                                                                    "tokenTypeIdx": 38,
                                                                  },
                                                                ],
                                                                "FunctionName": Array [
                                                                  Object {
                                                                    "endColumn": 49,
                                                                    "endLine": 1,
                                                                    "endOffset": 48,
                                                                    "image": "SIZE",
                                                                    "startColumn": 46,
                                                                    "startLine": 1,
                                                                    "startOffset": 45,
                                                                    "tokenType": Object {
                                                                      "CATEGORIES": Array [],
                                                                      "PATTERN": /\\[A-Z\\]\\[A-Z0-9_\\]\\*/,
                                                                      "categoryMatches": Array [],
                                                                      "categoryMatchesMap": Object {},
                                                                      "isParent": false,
                                                                      "name": "FunctionName",
                                                                      "tokenTypeIdx": 39,
                                                                    },
                                                                    "tokenTypeIdx": 39,
                                                                  },
                                                                ],
                                                                "LParen": Array [
                                                                  Object {
                                                                    "endColumn": 50,
                                                                    "endLine": 1,
                                                                    "endOffset": 49,
                                                                    "image": "(",
                                                                    "startColumn": 50,
                                                                    "startLine": 1,
                                                                    "startOffset": 49,
                                                                    "tokenType": Object {
                                                                      "CATEGORIES": Array [],
                                                                      "PATTERN": /\\\\\\(/,
                                                                      "categoryMatches": Array [],
                                                                      "categoryMatchesMap": Object {},
                                                                      "isParent": false,
                                                                      "name": "LParen",
                                                                      "tokenTypeIdx": 31,
                                                                    },
                                                                    "tokenTypeIdx": 31,
                                                                  },
                                                                ],
                                                                "RParen": Array [
                                                                  Object {
                                                                    "endColumn": 51,
                                                                    "endLine": 1,
                                                                    "endOffset": 50,
                                                                    "image": ")",
                                                                    "startColumn": 51,
                                                                    "startLine": 1,
                                                                    "startOffset": 50,
                                                                    "tokenType": Object {
                                                                      "CATEGORIES": Array [],
                                                                      "PATTERN": /\\\\\\)/,
                                                                      "categoryMatches": Array [],
                                                                      "categoryMatchesMap": Object {},
                                                                      "isParent": false,
                                                                      "name": "RParen",
                                                                      "tokenTypeIdx": 32,
                                                                    },
                                                                    "tokenTypeIdx": 32,
                                                                  },
                                                                ],
                                                              },
                                                              "name": "FunctionCall",
                                                            },
                                                          ],
                                                        },
                                                        "name": "chainExpression",
                                                      },
                                                    ],
                                                  },
                                                  "name": "multiplicationExpression",
                                                },
                                              ],
                                            },
                                            "name": "additionExpression",
                                          },
                                        ],
                                      },
                                      "name": "concatExpression",
                                    },
                                  ],
                                },
                                "name": "compareExpression",
                              },
                            ],
                          },
                          "name": "equalCompareExpression",
                        },
                      ],
                    },
                    "name": "notExpression",
                  },
                ],
              },
              "name": "combineExpression",
            },
          ],
        },
        "name": "expression",
      },
    ],
  },
  "name": "startExpression",
}
`;

exports[`Database Functions sum 1`] = `
Object {
  "children": Object {
    "Equal": Array [
      Object {
        "endColumn": 1,
        "endLine": 1,
        "endOffset": 0,
        "image": "=",
        "startColumn": 1,
        "startLine": 1,
        "startOffset": 0,
        "tokenType": Object {
          "CATEGORIES": Array [
            Object {
              "CATEGORIES": Array [],
              "PATTERN": /NOT_APPLICABLE/,
              "categoryMatches": Array [
                12,
                13,
                15,
                16,
              ],
              "categoryMatchesMap": Object {
                "12": true,
                "13": true,
                "15": true,
                "16": true,
              },
              "isParent": true,
              "name": "EqualCompareOperator",
              "tokenTypeIdx": 3,
            },
          ],
          "PATTERN": /=/,
          "categoryMatches": Array [],
          "categoryMatchesMap": Object {},
          "isParent": false,
          "name": "Equal",
          "tokenTypeIdx": 12,
        },
        "tokenTypeIdx": 12,
      },
    ],
    "expression": Array [
      Object {
        "children": Object {
          "combineExpression": Array [
            Object {
              "children": Object {
                "lhs": Array [
                  Object {
                    "children": Object {
                      "rhs": Array [
                        Object {
                          "children": Object {
                            "lhs": Array [
                              Object {
                                "children": Object {
                                  "lhs": Array [
                                    Object {
                                      "children": Object {
                                        "lhs": Array [
                                          Object {
                                            "children": Object {
                                              "lhs": Array [
                                                Object {
                                                  "children": Object {
                                                    "lhs": Array [
                                                      Object {
                                                        "children": Object {
                                                          "Dot": Array [
                                                            Object {
                                                              "endColumn": 76,
                                                              "endLine": 1,
                                                              "endOffset": 75,
                                                              "image": ".",
                                                              "startColumn": 76,
                                                              "startLine": 1,
                                                              "startOffset": 75,
                                                              "tokenType": Object {
                                                                "CATEGORIES": Array [],
                                                                "PATTERN": /\\\\\\./,
                                                                "categoryMatches": Array [],
                                                                "categoryMatchesMap": Object {},
                                                                "isParent": false,
                                                                "name": "Dot",
                                                                "tokenTypeIdx": 26,
                                                              },
                                                              "tokenTypeIdx": 26,
                                                            },
                                                          ],
                                                          "lhs": Array [
                                                            Object {
                                                              "children": Object {
                                                                "columnExpression": Array [
                                                                  Object {
                                                                    "children": Object {
                                                                      "Dollar": Array [
                                                                        Object {
                                                                          "endColumn": 2,
                                                                          "endLine": 1,
                                                                          "endOffset": 1,
                                                                          "image": "$",
                                                                          "startColumn": 2,
                                                                          "startLine": 1,
                                                                          "startOffset": 1,
                                                                          "tokenType": Object {
                                                                            "CATEGORIES": Array [],
                                                                            "PATTERN": /\\\\\\$/,
                                                                            "categoryMatches": Array [],
                                                                            "categoryMatchesMap": Object {},
                                                                            "isParent": false,
                                                                            "name": "Dollar",
                                                                            "tokenTypeIdx": 23,
                                                                          },
                                                                          "tokenTypeIdx": 23,
                                                                        },
                                                                      ],
                                                                      "Sharp": Array [
                                                                        Object {
                                                                          "endColumn": 39,
                                                                          "endLine": 1,
                                                                          "endOffset": 38,
                                                                          "image": "#",
                                                                          "startColumn": 39,
                                                                          "startLine": 1,
                                                                          "startOffset": 38,
                                                                          "tokenType": Object {
                                                                            "CATEGORIES": Array [],
                                                                            "PATTERN": /#/,
                                                                            "categoryMatches": Array [],
                                                                            "categoryMatchesMap": Object {},
                                                                            "isParent": false,
                                                                            "name": "Sharp",
                                                                            "tokenTypeIdx": 25,
                                                                          },
                                                                          "tokenTypeIdx": 25,
                                                                        },
                                                                      ],
                                                                      "UUID": Array [
                                                                        Object {
                                                                          "endColumn": 38,
                                                                          "endLine": 1,
                                                                          "endOffset": 37,
                                                                          "image": "28e28190-63bd-4f70-aeca-26e72574c01a",
                                                                          "startColumn": 3,
                                                                          "startLine": 1,
                                                                          "startOffset": 2,
                                                                          "tokenType": Object {
                                                                            "CATEGORIES": Array [],
                                                                            "PATTERN": /\\[0-9a-f\\]\\{8\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{12\\}/,
                                                                            "categoryMatches": Array [],
                                                                            "categoryMatchesMap": Object {},
                                                                            "isParent": false,
                                                                            "name": "UUID",
                                                                            "tokenTypeIdx": 27,
                                                                          },
                                                                          "tokenTypeIdx": 27,
                                                                        },
                                                                        Object {
                                                                          "endColumn": 75,
                                                                          "endLine": 1,
                                                                          "endOffset": 74,
                                                                          "image": "62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
                                                                          "startColumn": 40,
                                                                          "startLine": 1,
                                                                          "startOffset": 39,
                                                                          "tokenType": Object {
                                                                            "CATEGORIES": Array [],
                                                                            "PATTERN": /\\[0-9a-f\\]\\{8\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{4\\}-\\[0-9a-f\\]\\{12\\}/,
                                                                            "categoryMatches": Array [],
                                                                            "categoryMatchesMap": Object {},
                                                                            "isParent": false,
                                                                            "name": "UUID",
                                                                            "tokenTypeIdx": 27,
                                                                          },
                                                                          "tokenTypeIdx": 27,
                                                                        },
                                                                      ],
                                                                    },
                                                                    "name": "columnExpression",
                                                                  },
                                                                ],
                                                              },
                                                              "name": "atomicExpression",
                                                            },
                                                          ],
                                                          "rhs": Array [
                                                            Object {
                                                              "children": Object {
                                                                "Colon": Array [
                                                                  Object {
                                                                    "endColumn": 82,
                                                                    "endLine": 1,
                                                                    "endOffset": 81,
                                                                    "image": "::",
                                                                    "startColumn": 81,
                                                                    "startLine": 1,
                                                                    "startOffset": 80,
                                                                    "tokenType": Object {
                                                                      "CATEGORIES": Array [],
                                                                      "PATTERN": /::/,
                                                                      "categoryMatches": Array [],
                                                                      "categoryMatchesMap": Object {},
                                                                      "isParent": false,
                                                                      "name": "Colon",
                                                                      "tokenTypeIdx": 37,
                                                                    },
                                                                    "tokenTypeIdx": 37,
                                                                  },
                                                                ],
                                                                "FunctionGroupName": Array [
                                                                  Object {
                                                                    "endColumn": 80,
                                                                    "endLine": 1,
                                                                    "endOffset": 79,
                                                                    "image": "core",
                                                                    "startColumn": 77,
                                                                    "startLine": 1,
                                                                    "startOffset": 76,
                                                                    "tokenType": Object {
                                                                      "CATEGORIES": Array [],
                                                                      "PATTERN": /\\[a-zA-Z\\]\\[a-zA-Z0-9_\\]\\*/,
                                                                      "categoryMatches": Array [],
                                                                      "categoryMatchesMap": Object {},
                                                                      "isParent": false,
                                                                      "name": "FunctionGroupName",
                                                                      "tokenTypeIdx": 38,
                                                                    },
                                                                    "tokenTypeIdx": 38,
                                                                  },
                                                                ],
                                                                "FunctionName": Array [
                                                                  Object {
                                                                    "endColumn": 85,
                                                                    "endLine": 1,
                                                                    "endOffset": 84,
                                                                    "image": "SUM",
                                                                    "startColumn": 83,
                                                                    "startLine": 1,
                                                                    "startOffset": 82,
                                                                    "tokenType": Object {
                                                                      "CATEGORIES": Array [],
                                                                      "PATTERN": /\\[A-Z\\]\\[A-Z0-9_\\]\\*/,
                                                                      "categoryMatches": Array [],
                                                                      "categoryMatchesMap": Object {},
                                                                      "isParent": false,
                                                                      "name": "FunctionName",
                                                                      "tokenTypeIdx": 39,
                                                                    },
                                                                    "tokenTypeIdx": 39,
                                                                  },
                                                                ],
                                                                "LParen": Array [
                                                                  Object {
                                                                    "endColumn": 86,
                                                                    "endLine": 1,
                                                                    "endOffset": 85,
                                                                    "image": "(",
                                                                    "startColumn": 86,
                                                                    "startLine": 1,
                                                                    "startOffset": 85,
                                                                    "tokenType": Object {
                                                                      "CATEGORIES": Array [],
                                                                      "PATTERN": /\\\\\\(/,
                                                                      "categoryMatches": Array [],
                                                                      "categoryMatchesMap": Object {},
                                                                      "isParent": false,
                                                                      "name": "LParen",
                                                                      "tokenTypeIdx": 31,
                                                                    },
                                                                    "tokenTypeIdx": 31,
                                                                  },
                                                                ],
                                                                "RParen": Array [
                                                                  Object {
                                                                    "endColumn": 87,
                                                                    "endLine": 1,
                                                                    "endOffset": 86,
                                                                    "image": ")",
                                                                    "startColumn": 87,
                                                                    "startLine": 1,
                                                                    "startOffset": 86,
                                                                    "tokenType": Object {
                                                                      "CATEGORIES": Array [],
                                                                      "PATTERN": /\\\\\\)/,
                                                                      "categoryMatches": Array [],
                                                                      "categoryMatchesMap": Object {},
                                                                      "isParent": false,
                                                                      "name": "RParen",
                                                                      "tokenTypeIdx": 32,
                                                                    },
                                                                    "tokenTypeIdx": 32,
                                                                  },
                                                                ],
                                                              },
                                                              "name": "FunctionCall",
                                                            },
                                                          ],
                                                        },
                                                        "name": "chainExpression",
                                                      },
                                                    ],
                                                  },
                                                  "name": "multiplicationExpression",
                                                },
                                              ],
                                            },
                                            "name": "additionExpression",
                                          },
                                        ],
                                      },
                                      "name": "concatExpression",
                                    },
                                  ],
                                },
                                "name": "compareExpression",
                              },
                            ],
                          },
                          "name": "equalCompareExpression",
                        },
                      ],
                    },
                    "name": "notExpression",
                  },
                ],
              },
              "name": "combineExpression",
            },
          ],
        },
        "name": "expression",
      },
    ],
  },
  "name": "startExpression",
}
`;
